<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SetFeeder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="add_stock">Add</string>
    <string name="symbol">Symbol: </string>
    <string name="stock_hint">Enter Stock Symbol</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="header_symbol">Stock</string>
    <string name="header_price">Price</string>
    <string name="header_change">Change</string>

</resources>
