<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   	<EditText
        android:id="@+id/stockSymbolEditText"
        android:hint="@string/stock_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10" >
    </EditText>

   	<Button
   	    android:id="@+id/addStockCancel"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="true"
   	    android:layout_below="@+id/stockSymbolEditText"
   	    android:layout_marginLeft="38dp"
   	    android:text="@string/button_cancel" />

   	<Button
   	    android:id="@+id/addStockSubmit"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignRight="@+id/addStockCancel"
   	    android:layout_below="@+id/stockSymbolEditText"
   	    android:layout_alignParentRight="true"
   	    android:layout_marginRight="38dp"
   	    android:text="@string/button_submit" />
    
</RelativeLayout>