<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="horizontal" 
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/header_symbol"
        android:layout_width="0dp"
        android:layout_weight=".30"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/header_symbol"
        android:padding="3sp" />
    <TextView
        android:id="@+id/header_price"
        android:layout_width="0dp"
        android:layout_weight=".25"
        android:layout_height="wrap_content"
        android:layout_marginRight="10sp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/header_price" 
        android:padding="3sp" />
    <TextView
        android:id="@+id/header_change"
        android:layout_width="0dp"
        android:layout_weight=".45"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/header_change" 
        android:padding="3sp" />

</LinearLayout>
